# yggdrasil

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  biome.json  docker-compose.dev.yml  environments.json  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  tsup.config.ts  turbo.json  vitest.config.ts  vitest.workspace.ts
.do/: app.yaml
.github/: dependabot.yml
.github/workflows/: ci.yml  deploy.yml
apps/demo/: index.html  manifest.json  package.json  server.ts  tsconfig.json  tsup.config.ts  vite.config.ts
claude/: project.md
environments/: development.json
heimdall/: package.json  tsconfig.json  vitest.config.ts
heimdall/src/: index.ts  middleware.ts
scripts/: dev.sh  env-init.mjs  generate-secrets.mjs  init-db.sh  init-db.sql  init-env.ts
services/bifrost/: .env.example  Dockerfile  README.md  biome.json  manifest.json  package.json  tsup.config.ts  vitest.config.ts
services/forseti/: package.json
services/frigg/: .env.example  README.md  manifest.json  package.json  tsconfig.json
services/heimdall/: .env.example  Cargo.toml  Dockerfile  README.md  manifest.json  package.json  vitest.config.ts
services/heimdall/src/: app.ts  handlers.rs  index.ts  main.rs
services/heimdall/src/lib/: db.ts  env.ts  jwt.ts  openapi.ts  schemas.ts  vidar.ts
services/heimdall/src/middleware/: api-key.ts  bearer.ts  rate-limit.ts  vidar.ts
services/heimdall/src/routes/: health.ts  login.ts  me.ts  refresh.ts  register.ts  verify.ts
services/heimdall/src/services/: users.ts
src/: app.ts
(+259 files in other folders)
